OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/display.h


void D_polyline_clip(const double *, const double *, int);

void D_polygon_cull(const double *, const double *, int);

void D_polygon_clip(const double *, const double *, int);

void D_box_clip(double, double, double, double);

void D_move(double, double);

void D_cont(double, double);

void D_polydots(const double *, const double *, int);

void D_polyline(const double *, const double *, int);

void D_polygon(const double *, const double *, int);

void D_box(double, double, double, double);

void D_line_width(double);


/* get_win.c */
int get_win_w_mouse(float *, float *, float *, float *);


/* ident_win.c */
int ident_win(char *);


/* list.c */
int D_set_cell_name(const char *);

int D_get_cell_name(char *);

int D_set_dig_name(const char *);

int D_get_dig_name(char *);

int D_add_to_cell_list(const char *);

int D_get_cell_list(char ***, int *);

int D_add_to_dig_list(const char *);

int D_get_dig_list(char ***, int *);

int D_add_to_list(const char *);

int D_get_list(char ***, int *);

int D_clear_window(void);

int D_set_erase_color(const char *);

int D_get_erase_color(char *);


/* popup.c */
int D_popup(int, int, int, int, int, int, char *[]);


/* raster.c */
int D_draw_raster(int, const void *, struct Colors *, RASTER_MAP_TYPE);

int D_draw_d_raster(int, const DCELL *, struct Colors *);

int D_draw_f_raster(int, const FCELL *, struct Colors *);

int D_draw_c_raster(int, const CELL *, struct Colors *);

int D_draw_cell(int, const CELL *, struct Colors *);

int D_cell_draw_setup(int, int, int, int);

int D_draw_raster_RGB(int, const void *, const void *, const void *,
		      struct Colors *, struct Colors *, struct Colors *,
		      RASTER_MAP_TYPE, RASTER_MAP_TYPE, RASTER_MAP_TYPE);

void D_cell_draw_end(void);