invest/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/gis.h



/*=========================== Typedefs/Structures ==========================*/

typedef int CELL;

typedef double DCELL;

typedef float FCELL;


typedef int RASTER_MAP_TYPE;