invest/OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/display.py


# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 59
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_polyline_clip'):
    D_polyline_clip = _libs['grass_display.6.4.2RC2'].D_polyline_clip
    D_polyline_clip.restype = None
    D_polyline_clip.argtypes = [POINTER(c_double), POINTER(c_double), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 60
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_polygon_cull'):
    D_polygon_cull = _libs['grass_display.6.4.2RC2'].D_polygon_cull
    D_polygon_cull.restype = None
    D_polygon_cull.argtypes = [POINTER(c_double), POINTER(c_double), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 61
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_polygon_clip'):
    D_polygon_clip = _libs['grass_display.6.4.2RC2'].D_polygon_clip
    D_polygon_clip.restype = None
    D_polygon_clip.argtypes = [POINTER(c_double), POINTER(c_double), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 62
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_box_clip'):
    D_box_clip = _libs['grass_display.6.4.2RC2'].D_box_clip
    D_box_clip.restype = None
    D_box_clip.argtypes = [c_double, c_double, c_double, c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 63
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_move'):
    D_move = _libs['grass_display.6.4.2RC2'].D_move
    D_move.restype = None
    D_move.argtypes = [c_double, c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 64
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_cont'):
    D_cont = _libs['grass_display.6.4.2RC2'].D_cont
    D_cont.restype = None
    D_cont.argtypes = [c_double, c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 65
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_polydots'):
    D_polydots = _libs['grass_display.6.4.2RC2'].D_polydots
    D_polydots.restype = None
    D_polydots.argtypes = [POINTER(c_double), POINTER(c_double), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 66
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_polyline'):
    D_polyline = _libs['grass_display.6.4.2RC2'].D_polyline
    D_polyline.restype = None
    D_polyline.argtypes = [POINTER(c_double), POINTER(c_double), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 67
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_polygon'):
    D_polygon = _libs['grass_display.6.4.2RC2'].D_polygon
    D_polygon.restype = None
    D_polygon.argtypes = [POINTER(c_double), POINTER(c_double), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 68
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_box'):
    D_box = _libs['grass_display.6.4.2RC2'].D_box
    D_box.restype = None
    D_box.argtypes = [c_double, c_double, c_double, c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 69
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_line_width'):
    D_line_width = _libs['grass_display.6.4.2RC2'].D_line_width
    D_line_width.restype = None
    D_line_width.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 72
if hasattr(_libs['grass_display.6.4.2RC2'], 'get_win_w_mouse'):
    get_win_w_mouse = _libs['grass_display.6.4.2RC2'].get_win_w_mouse
    get_win_w_mouse.restype = c_int
    get_win_w_mouse.argtypes = [POINTER(c_float), POINTER(c_float), POINTER(c_float), POINTER(c_float)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 75
if hasattr(_libs['grass_display.6.4.2RC2'], 'ident_win'):
    ident_win = _libs['grass_display.6.4.2RC2'].ident_win
    ident_win.restype = c_int
    ident_win.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 78
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_set_cell_name'):
    D_set_cell_name = _libs['grass_display.6.4.2RC2'].D_set_cell_name
    D_set_cell_name.restype = c_int
    D_set_cell_name.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 79
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_cell_name'):
    D_get_cell_name = _libs['grass_display.6.4.2RC2'].D_get_cell_name
    D_get_cell_name.restype = c_int
    D_get_cell_name.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 80
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_set_dig_name'):
    D_set_dig_name = _libs['grass_display.6.4.2RC2'].D_set_dig_name
    D_set_dig_name.restype = c_int
    D_set_dig_name.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 81
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_dig_name'):
    D_get_dig_name = _libs['grass_display.6.4.2RC2'].D_get_dig_name
    D_get_dig_name.restype = c_int
    D_get_dig_name.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 82
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_add_to_cell_list'):
    D_add_to_cell_list = _libs['grass_display.6.4.2RC2'].D_add_to_cell_list
    D_add_to_cell_list.restype = c_int
    D_add_to_cell_list.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 83
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_cell_list'):
    D_get_cell_list = _libs['grass_display.6.4.2RC2'].D_get_cell_list
    D_get_cell_list.restype = c_int
    D_get_cell_list.argtypes = [POINTER(POINTER(POINTER(c_char))), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 84
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_add_to_dig_list'):
    D_add_to_dig_list = _libs['grass_display.6.4.2RC2'].D_add_to_dig_list
    D_add_to_dig_list.restype = c_int
    D_add_to_dig_list.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 85
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_dig_list'):
    D_get_dig_list = _libs['grass_display.6.4.2RC2'].D_get_dig_list
    D_get_dig_list.restype = c_int
    D_get_dig_list.argtypes = [POINTER(POINTER(POINTER(c_char))), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 86
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_add_to_list'):
    D_add_to_list = _libs['grass_display.6.4.2RC2'].D_add_to_list
    D_add_to_list.restype = c_int
    D_add_to_list.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 87
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_list'):
    D_get_list = _libs['grass_display.6.4.2RC2'].D_get_list
    D_get_list.restype = c_int
    D_get_list.argtypes = [POINTER(POINTER(POINTER(c_char))), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 88
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_clear_window'):
    D_clear_window = _libs['grass_display.6.4.2RC2'].D_clear_window
    D_clear_window.restype = c_int
    D_clear_window.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 89
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_set_erase_color'):
    D_set_erase_color = _libs['grass_display.6.4.2RC2'].D_set_erase_color
    D_set_erase_color.restype = c_int
    D_set_erase_color.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 90
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_erase_color'):
    D_get_erase_color = _libs['grass_display.6.4.2RC2'].D_get_erase_color
    D_get_erase_color.restype = c_int
    D_get_erase_color.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 93
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_popup'):
    D_popup = _libs['grass_display.6.4.2RC2'].D_popup
    D_popup.restype = c_int
    D_popup.argtypes = [c_int, c_int, c_int, c_int, c_int, c_int, POINTER(POINTER(c_char))]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 96
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_draw_raster'):
    D_draw_raster = _libs['grass_display.6.4.2RC2'].D_draw_raster
    D_draw_raster.restype = c_int
    D_draw_raster.argtypes = [c_int, POINTER(None), POINTER(struct_Colors), RASTER_MAP_TYPE]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 97
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_draw_d_raster'):
    D_draw_d_raster = _libs['grass_display.6.4.2RC2'].D_draw_d_raster
    D_draw_d_raster.restype = c_int
    D_draw_d_raster.argtypes = [c_int, POINTER(DCELL), POINTER(struct_Colors)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 98
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_draw_f_raster'):
    D_draw_f_raster = _libs['grass_display.6.4.2RC2'].D_draw_f_raster
    D_draw_f_raster.restype = c_int
    D_draw_f_raster.argtypes = [c_int, POINTER(FCELL), POINTER(struct_Colors)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 99
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_draw_c_raster'):
    D_draw_c_raster = _libs['grass_display.6.4.2RC2'].D_draw_c_raster
    D_draw_c_raster.restype = c_int
    D_draw_c_raster.argtypes = [c_int, POINTER(CELL), POINTER(struct_Colors)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 100
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_draw_cell'):
    D_draw_cell = _libs['grass_display.6.4.2RC2'].D_draw_cell
    D_draw_cell.restype = c_int
    D_draw_cell.argtypes = [c_int, POINTER(CELL), POINTER(struct_Colors)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 101
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_cell_draw_setup'):
    D_cell_draw_setup = _libs['grass_display.6.4.2RC2'].D_cell_draw_setup
    D_cell_draw_setup.restype = c_int
    D_cell_draw_setup.argtypes = [c_int, c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 102
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_draw_raster_RGB'):
    D_draw_raster_RGB = _libs['grass_display.6.4.2RC2'].D_draw_raster_RGB
    D_draw_raster_RGB.restype = c_int
    D_draw_raster_RGB.argtypes = [c_int, POINTER(None), POINTER(None), POINTER(None), POINTER(struct_Colors), POINTER(struct_Colors), POINTER(struct_Colors), RASTER_MAP_TYPE, RASTER_MAP_TYPE, RASTER_MAP_TYPE]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 105
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_cell_draw_end'):
    D_cell_draw_end = _libs['grass_display.6.4.2RC2'].D_cell_draw_end
    D_cell_draw_end.restype = None
    D_cell_draw_end.argtypes = []
